--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ name: Build APK
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -13,6 +15,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
+
     - name: Install system dependencies
       run: |
         sudo apt update
@@ -22,6 +29,7 @@ jobs:
           unzip \
           openjdk-17-jdk \
           python3-pip \
+          python3-dev \
           autoconf \
           libtool \
           pkg-config \
@@ -31,19 +39,37 @@ jobs:
           libtinfo5 \
           cmake \
           libffi-dev \
-          libssl-dev
+          libssl-dev \
+          wget
 
     - name: Install Python dependencies
       run: |
-        python3 -m pip install --upgrade pip
-        pip3 install --user buildozer cython  # ✅ HARUS buildozer
+        python -m pip install --upgrade pip
+        pip install --user buildozer cython
+
+    - name: Setup Android SDK and accept licenses
+      run: |
+        # Setup Android directory
+        mkdir -p ~/.android
+        touch ~/.android/repositories.cfg
+        
+        # Download and setup SDK manager if not exists
+        if [ ! -d "$HOME/.buildozer/android/platform/android-sdk" ]; then
+          echo "SDK not found, will be downloaded by buildozer"
+        else
+          # Accept all SDK licenses
+          yes | ~/.buildozer/android/platform/android-sdk/tools/bin/sdkmanager --licenses > /dev/null 2>&1 || true
+        fi
+        
+        echo "Android SDK setup completed"
 
     - name: Build with Buildozer
       run: |
         export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
         export PATH=$PATH:~/.local/bin
-        # ✅ PASTIKAN buildozer, BUKAN buildzer/builderz
-        ~/.local/bin/buildozer -v android debug
+        
+        # Auto-accept semua prompt dengan 'yes'
+        yes | buildozer -v android debug
         
     - name: Upload APK
       uses: actions/upload-artifact@v4
