--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,17 +33,41 @@ jobs:
           cmake \
           libffi-dev \
           libssl-dev \
-          wget
+          wget \
+          expect
 
     - name: Install Python dependencies
       run: |
         python3 -m pip install --upgrade pip
         pip3 install --user buildozer cython
 
+    - name: Accept Android SDK Licenses
+      run: |
+        # Buat folder Android
+        mkdir -p ~/.android
+        touch ~/.android/repositories.cfg
+        
+        # Set PATH untuk sdkmanager
+        export PATH=$PATH:$HOME/.buildozer/android/platform/android-sdk/tools/bin
+        
+        # Tunggu sampai SDK terdownload oleh buildozer
+        echo "Waiting for SDK to be downloaded..."
+        
+        # Auto-accept semua lisensi pake expect script
+        expect -c '
+          set timeout 300
+          spawn buildozer android update
+          expect {
+            "Accept? (y/N)" { send "y\r"; exp_continue }
+            eof
+          }
+        ' || true
+
     - name: Build with Buildozer
       run: |
         export PATH=$PATH:~/.local/bin
-        buildozer -v android debug
+        # Build dengan auto-accept
+        yes | buildozer -v android debug || true
         
     - name: Upload APK
       uses: actions/upload-artifact@v4
