--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,6 @@ name: Build APK
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -14,6 +12,11 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
 
     - name: Install system dependencies
       run: |
@@ -40,106 +43,70 @@ jobs:
           tree \
           findutils
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
-
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install --user buildozer cython
 
-    - name: Accept Android SDK Licenses
+    - name: Accept Android SDK Licenses (SOLUSI UTAMA)
       run: |
+        # Buat folder Android
         mkdir -p ~/.android
         touch ~/.android/repositories.cfg
-        # Auto-accept semua lisensi jika sdkmanager sudah ada
-        if [ -f "$HOME/.buildozer/android/platform/android-sdk/tools/bin/sdkmanager" ]; then
-          yes | $HOME/.buildozer/android/platform/android-sdk/tools/bin/sdkmanager --licenses > /dev/null 2>&1 || true
-        fi
-        echo "✅ SDK licenses setup completed"
+        
+        # Install sdkmanager terlebih dahulu
+        echo "Installing Android SDK command line tools..."
+        mkdir -p ~/android-sdk/cmdline-tools
+        cd ~/android-sdk
+        wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+        unzip -q commandlinetools-linux-9477386_latest.zip
+        mv cmdline-tools latest
+        mkdir -p cmdline-tools
+        mv latest cmdline-tools/
+        export PATH=$PATH:~/android-sdk/cmdline-tools/latest/bin
+        
+        # Auto-accept semua lisensi
+        echo "Accepting all Android SDK licenses..."
+        yes | ~/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses || true
+        
+        # Set environment variables
+        echo "ANDROID_HOME=~/android-sdk" >> $GITHUB_ENV
+        echo "PATH=$PATH:~/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_ENV
 
     - name: Build with Buildozer
       run: |
-        export PATH=$PATH:~/.local/bin
+        export PATH=$PATH:~/.local/bin:~/android-sdk/cmdline-tools/latest/bin
         export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+        export ANDROID_HOME=~/android-sdk
         
-        # Build APK dengan retry mechanism
-        for i in {1..3}; do
-          echo "🚀 Build attempt $i of 3"
-          if buildozer -v android debug; then
-            echo "✅ Build successful on attempt $i"
-            break
-          else
-            echo "❌ Build failed on attempt $i"
-            if [ $i -eq 3 ]; then
-              echo "All build attempts failed"
-              exit 1
-            fi
-            echo "⏳ Waiting 30 seconds before retry..."
-            sleep 30
-          fi
-        done
-
-    - name: Find APK files
+        # Build APK
+        buildozer -v android debug
+        
+    - name: Find and Upload APK
       if: always()
       run: |
-        echo "🔍 Mencari file APK di semua lokasi..."
-        
-        # Buat folder untuk menyimpan APK
+        echo "🔍 Mencari file APK yang dihasilkan..."
         mkdir -p apk-artifacts
         
-        # Cari semua file .apk di seluruh sistem
-        find /home/runner -name "*.apk" -type f 2>/dev/null | while read apk; do
+        # Cari semua file .apk
+        find ~ -name "*.apk" -type f 2>/dev/null | while read apk; do
           echo "✅ APK ditemukan: $apk"
           ls -la "$apk"
-          # Copy ke folder artifacts dengan nama unik
-          cp "$apk" apk-artifacts/ || true
+          cp "$apk" apk-artifacts/ 2>/dev/null || true
         done
         
-        # Cari juga di folder proyek
         find $GITHUB_WORKSPACE -name "*.apk" -type f 2>/dev/null | while read apk; do
           echo "✅ APK ditemukan di workspace: $apk"
           ls -la "$apk"
-          cp "$apk" apk-artifacts/ || true
+          cp "$apk" apk-artifacts/ 2>/dev/null || true
         done
         
-        # Tampilkan semua APK yang ditemukan
         echo "📋 Daftar APK yang siap diupload:"
         ls -la apk-artifacts/ || echo "Tidak ada APK ditemukan"
         
-        # Informasi tambahan untuk debugging
-        echo "📁 Struktur folder buildozer:"
-        ls -la ~/.buildozer/ || echo "Folder .buildozer tidak ditemukan"
-        ls -la ~/.buildozer/android/platform/ || echo "Folder platform tidak ditemukan"
-        ls -la ~/.buildozer/android/platform/build-*/ || echo "Folder build tidak ditemukan"
-        ls -la ~/.buildozer/android/platform/build-*/dists/ || echo "Folder dists tidak ditemukan"
-        ls -la ~/.buildozer/android/platform/build-*/dists/*/bin/ || echo "Folder bin tidak ditemukan"
-
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
         name: RuijieRekap-APK
-        path: |
-          apk-artifacts/*.apk
-          bin/*.apk
-          **/*.apk
-          *.apk
-        if-no-files-found: warn
-        compression-level: 6
-        overwrite: true
+        path: apk-artifacts/*.apk
       if: always()
-
-    - name: Debug information
-      if: failure()
-      run: |
-        echo "❌ Build failed. Collecting debug information..."
-        echo "Current directory:"
-        pwd
-        echo "Directory contents:"
-        ls -la
-        echo "Buildozer logs:"
-        cat ~/.buildozer/buildozer.log 2>/dev/null || echo "No buildozer log"
-        echo "Python packages:"
-        pip list
