--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install --user buildozer cython
 
-    - name: Setup Android SDK with correct paths
+    - name: Setup Android SDK with ALL build-tools versions
       run: |
         # Buat folder Android
         mkdir -p ~/.android
@@ -69,43 +69,40 @@ jobs:
         echo "✅ Accepting all Android SDK licenses..."
         yes | ~/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses || true
         
-        # Install build-tools versi STABIL
-        echo "🔧 Installing stable build-tools 30.0.0..."
-        ~/android-sdk/cmdline-tools/latest/bin/sdkmanager "build-tools;30.0.0" || true
+        # 🚨 INSTALL SEMUA VERSI YANG DIBUTUHKAN
+        echo "🔧 Installing ALL build-tools versions..."
+        ~/android-sdk/cmdline-tools/latest/bin/sdkmanager "build-tools;30.0.0" "build-tools;30.0.1" "build-tools;30.0.2" "build-tools:30.0.3" "build-tools;31.0.0" "build-tools;32.0.0" "build-tools;33.0.0" "build-tools;33.0.1" "build-tools;33.0.2" "build-tools;33.0.3" "build-tools;34.0.0" "build-tools;35.0.0" || true
         
         # Install platform tools
         ~/android-sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" || true
         
-        # Install platform android-30
-        ~/android-sdk/cmdline-tools/latest/bin/sdkmanager "platforms;android-30" || true
+        # Install platforms
+        ~/android-sdk/cmdline-tools/latest/bin/sdkmanager "platforms;android-30" "platforms;android-31" "platforms;android-32" "platforms;android-33" "platforms;android-34" || true
         
-        # 🚨 PENTING: Buat symlink ke folder yang dicari buildozer
-        mkdir -p /home/runner/.buildozer/android/platform/android-sdk/tools/bin
-        ln -sf ~/android-sdk/cmdline-tools/latest/bin/sdkmanager /home/runner/.buildozer/android/platform/android-sdk/tools/bin/sdkmanager
-        ln -sf ~/android-sdk/cmdline-tools/latest/bin/avdmanager /home/runner/.buildozer/android/platform/android-sdk/tools/bin/avdmanager
+        # 🚨 HAPUS FOLDER BUILDOZER SDK AGAR DIPAKSA PAKAI SDK KITA
+        rm -rf /home/runner/.buildozer/android/platform/android-sdk
+        
+        # Buat symlink dari folder buildozer ke SDK kita
+        mkdir -p /home/runner/.buildozer/android/platform
+        ln -sf ~/android-sdk /home/runner/.buildozer/android/platform/android-sdk
         
         # Set environment variables
-        echo "ANDROID_HOME=/home/runner/.buildozer/android/platform/android-sdk" >> $GITHUB_ENV
-        echo "ANDROID_SDK_ROOT=/home/runner/.buildozer/android/platform/android-sdk" >> $GITHUB_ENV
-        echo "PATH=$PATH:~/android-sdk/cmdline-tools/latest/bin:/home/runner/.buildozer/android/platform/android-sdk/tools/bin" >> $GITHUB_ENV
+        echo "ANDROID_HOME=~/android-sdk" >> $GITHUB_ENV
+        echo "ANDROID_SDK_ROOT=~/android-sdk" >> $GITHUB_ENV
+        echo "PATH=$PATH:~/android-sdk/cmdline-tools/latest/bin:~/android-sdk/tools/bin" >> $GITHUB_ENV
         
         echo "✅ Android SDK setup completed!"
 
-    - name: Verify SDK setup
+    - name: Build with Buildozer (WITHOUT SDK DOWNLOAD)
       run: |
-        echo "🔍 Verifikasi instalasi SDK:"
-        ls -la ~/android-sdk/cmdline-tools/latest/bin/ || echo "Tidak ada sdkmanager"
-        ls -la /home/runner/.buildozer/android/platform/android-sdk/tools/bin/ || echo "Folder buildozer belum ada"
-        which sdkmanager || echo "sdkmanager tidak di PATH"
-        echo "ANDROID_HOME=$ANDROID_HOME"
-        echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT"
-
-    - name: Build with Buildozer
-      run: |
-        export PATH=$PATH:~/.local/bin:~/android-sdk/cmdline-tools/latest/bin:/home/runner/.buildozer/android/platform/android-sdk/tools/bin
+        export PATH=$PATH:~/.local/bin:~/android-sdk/cmdline-tools/latest/bin
         export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
-        export ANDROID_HOME=/home/runner/.buildozer/android/platform/android-sdk
-        export ANDROID_SDK_ROOT=/home/runner/.buildozer/android/platform/android-sdk
+        export ANDROID_HOME=~/android-sdk
+        export ANDROID_SDK_ROOT=~/android-sdk
+        
+        # Buat file marker agar buildozer tidak download SDK lagi
+        mkdir -p /home/runner/.buildozer/android/platform/android-sdk
+        touch /home/runner/.buildozer/android/platform/android-sdk/.downloaded
         
         # Build APK
         buildozer -v android debug
