--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.8'  # Turunkan ke 3.8 untuk kompatibilitas
+        python-version: '3.8'
 
     - name: Install system dependencies
       run: |
@@ -25,7 +25,7 @@ jobs:
           git \
           zip \
           unzip \
-          openjdk-11-jdk \  # Turunkan ke Java 11
+          openjdk-11-jdk \
           python3-pip \
           python3-dev \
           autoconf \
@@ -34,12 +34,12 @@ jobs:
           zlib1g-dev \
           libncurses5-dev \
           libncursesw5-dev \
-          libtinfo5 \
           cmake \
           libffi-dev \
           libssl-dev \
           wget \
           expect
+        # HAPUS libtinfo5 dari daftar (sudah include di ncurses)
 
     - name: Install Python dependencies
       run: |
@@ -52,7 +52,7 @@ jobs:
         mkdir -p ~/.android
         touch ~/.android/repositories.cfg
         
-        # PAKAI SDK TOOLS VERSI LAMA (26.1.1) YANG TERBUKTI STABIL
+        # Install SDK tools versi lama
         echo "Installing Android SDK (stable version)..."
         cd ~
         wget -q https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
@@ -66,19 +66,16 @@ jobs:
         echo "Accepting all Android SDK licenses..."
         yes | ~/android-sdk/tools/bin/sdkmanager --licenses || true
         
-        # Install platform tools
-        ~/android-sdk/tools/bin/sdkmanager "platform-tools" "platforms;android-30" || true
-        
-        # Install build-tools versi stabil
-        ~/android-sdk/tools/bin/sdkmanager "build-tools;30.0.0" "build-tools;30.0.3" || true
-        
-        # Install NDK
+        # Install komponen yang diperlukan
+        ~/android-sdk/tools/bin/sdkmanager "platform-tools" || true
+        ~/android-sdk/tools/bin/sdkmanager "platforms;android-30" || true
+        ~/android-sdk/tools/bin/sdkmanager "build-tools;30.0.0" || true
         ~/android-sdk/tools/bin/sdkmanager "ndk;23.1.7779620" || true
         
-        # BUAT FOLDER UNTUK BUILDOZER
+        # Buat folder untuk buildozer
         mkdir -p /home/runner/.buildozer/android/platform
         
-        # COPY SDK ke folder buildozer
+        # Copy SDK ke folder buildozer
         cp -r ~/android-sdk /home/runner/.buildozer/android/platform/
         
         # Buat symlink untuk ndk
@@ -88,16 +85,6 @@ jobs:
         echo "ANDROID_HOME=/home/runner/.buildozer/android/platform/android-sdk" >> $GITHUB_ENV
         echo "ANDROID_SDK_ROOT=/home/runner/.buildozer/android/platform/android-sdk" >> $GITHUB_ENV
         echo "PATH=$PATH:~/android-sdk/tools/bin:~/android-sdk/platform-tools" >> $GITHUB_ENV
-        
-        echo "Android SDK setup completed!"
-
-    - name: Verify SDK setup
-      run: |
-        echo "🔍 Verifikasi folder SDK:"
-        ls -la /home/runner/.buildozer/android/platform/android-sdk/ || echo "SDK tidak ada"
-        ls -la /home/runner/.buildozer/android/platform/android-sdk/tools/bin/ || echo "tools/bin tidak ada"
-        ~/android-sdk/tools/bin/sdkmanager --version || echo "sdkmanager error"
-        echo "ANDROID_HOME=$ANDROID_HOME"
 
     - name: Build with Buildozer
       run: |
@@ -106,32 +93,13 @@ jobs:
         export ANDROID_HOME=/home/runner/.buildozer/android/platform/android-sdk
         export ANDROID_SDK_ROOT=/home/runner/.buildozer/android/platform/android-sdk
         
-        # Build APK
         buildozer -v android debug
-        
-    - name: Find and Upload APK
-      if: always()
-      run: |
-        echo "🔍 Mencari file APK..."
-        mkdir -p apk-artifacts
-        
-        # Cari semua file .apk
-        find ~ -name "*.apk" -type f 2>/dev/null | while read apk; do
-          echo "APK ditemukan: $apk"
-          cp "$apk" apk-artifacts/ 2>/dev/null || true
-        done
-        
-        find $GITHUB_WORKSPACE -name "*.apk" -type f 2>/dev/null | while read apk; do
-          echo "APK ditemukan di workspace: $apk"
-          cp "$apk" apk-artifacts/ 2>/dev/null || true
-        done
-        
-        echo "Daftar APK:"
-        ls -la apk-artifacts/ || echo "Tidak ada APK"
         
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
         name: RuijieRekap-APK
-        path: apk-artifacts/*.apk
+        path: |
+          bin/*.apk
+          **/*.apk
       if: always()
